--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,8 @@
   <title>Assignment</title>
 </head>
 <body>
-  <ul class="list-group">
-    <li class="list-group-item">
-      <img src="https://acre-image-collections.s3.amazonaws.com/image-6578722caea701702392364_medium.jpg" alt="some alt" />
-    </li>
-    <li class="list-group-item">
-      <img src="https://acre-images.s3.amazonaws.com/image-5ac62b9e561041522936734_medium.jpeg" alt="some other alt" />
-    </li>
-  </ul>
+  <ul class="list-group"></ul>
+  <script src="../dist/js/scripts.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
